# PlayerModelManager_FSModels

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  README.md  create_thunderstore_package.py  mod.toml  mod_elf.mk  project.py
include/extlib/: object_table_oot.hpp  yaz0.hpp
include/mod/: defines_ooto.h  defines_z64o.h  globalobjects_api.h  ml64compat.h  ml64compat_mm.h  oot_equipment.h  oot_objects.h  playermodelmanager_api.h  yazmtcorelib_api.h
include/shared/: defines_mmo.h  playermodelmanager_api.h
py/colors/: __init__.py  colors.py  csscolors.py
py/invoke/: __init__.py  _version.py  collection.py  config.py  context.py  env.py  exceptions.py  executor.py  loader.py  program.py  runners.py  tasks.py  terminals.py  util.py  watchers.py
py/invoke/completion/: complete.py
py/invoke/parser/: argument.py  context.py  parser.py
py/modbuildcore/: __init__.py  archives.py  build_output.py  cmake.py  downloads.py  job_base.py  jobs.py  makefiles.py  thunderstore.py  tomls.py  utils.py
src/extlib/: CMakeLists.txt  lib_main.cpp  yaz0.c  yaz0.cpp
src/mod/: main.c  ml64compat.c  ml64compat_mm.c  oot_equipment.c  oot_objects.c  playasmanifesthelper.c
thunderstore_info/: CHANGELOG.md  README.md  dependencies.txt  package_name.txt
